--- a/index.html
+++ b/index.html
@@ -13,7 +13,41 @@
 <body>
 <div class="container">
     <h1>JS Практика</h1>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab accusantium beatae dolor, dolorem dolores ea error excepturi inventore minus, nemo nesciunt nobis nostrum odio odit quia veritatis voluptatibus, voluptatum. Aliquam dolor ex exercitationem, impedit iure quae quo quos sapiente tenetur veritatis! Animi beatae deserunt doloremque illo illum incidunt officiis! Blanditiis exercitationem fugiat, hic iste itaque labore maiores minus nisi non quis quisquam reiciendis tempora, tempore ut velit? Dicta libero nemo pariatur unde. Corporis delectus et explicabo facere, hic laborum, laudantium nihil perferendis sequi suscipit tempora tenetur voluptas voluptatem? Consectetur consequatur culpa minus nihil quia, quibusdam quisquam quos soluta unde vel.</p>
+    <div class="row">
+        <div class="col">
+            <div class="card">
+                <img
+                        src="https://images.pexels.com/photos/1510392/pexels-photo-1510392.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" class="card-img-top" style="height: 300px;">
+                <div class="card-body">
+                    <h5 class="card-title">Яблоки</h5>
+                    <a href="#" class="btn btn-primary">Посмотреть цену</a>
+                    <a href="#" class="btn btn-danger">Удалить</a>
+                </div>
+            </div>
+        </div>
+        <div class="col">
+            <div class="card">
+                <img
+                        src="https://images.pexels.com/photos/3804878/pexels-photo-3804878.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" class="card-img-top" style="height: 300px;">
+                <div class="card-body">
+                    <h5 class="card-title">Апельсины</h5>
+                    <a href="#" class="btn btn-primary">Посмотреть цену</a>
+                    <a href="#" class="btn btn-danger">Удалить</a>
+                </div>
+            </div>
+        </div>
+        <div class="col">
+            <div class="card">
+                <img
+                        src="https://images.pexels.com/photos/5875696/pexels-photo-5875696.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" class="card-img-top" style="height: 300px;">
+                <div class="card-body">
+                    <h5 class="card-title">Манго</h5>
+                    <a href="#" class="btn btn-primary">Посмотреть цену</a>
+                    <a href="#" class="btn btn-danger">Удалить</a>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
 
 
