--- a/index.html
+++ b/index.html
@@ -13,46 +13,13 @@
 <body>
 <div class="container">
     <h1>JS Практика</h1>
-    <div class="row">
-        <div class="col">
-            <div class="card">
-                <img
-                        src="https://images.pexels.com/photos/1510392/pexels-photo-1510392.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" class="card-img-top" style="height: 300px;">
-                <div class="card-body">
-                    <h5 class="card-title">Яблоки</h5>
-                    <a href="#" class="btn btn-primary">Посмотреть цену</a>
-                    <a href="#" class="btn btn-danger">Удалить</a>
-                </div>
-            </div>
-        </div>
-        <div class="col">
-            <div class="card">
-                <img
-                        src="https://images.pexels.com/photos/3804878/pexels-photo-3804878.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" class="card-img-top" style="height: 300px;">
-                <div class="card-body">
-                    <h5 class="card-title">Апельсины</h5>
-                    <a href="#" class="btn btn-primary">Посмотреть цену</a>
-                    <a href="#" class="btn btn-danger">Удалить</a>
-                </div>
-            </div>
-        </div>
-        <div class="col">
-            <div class="card">
-                <img
-                        src="https://images.pexels.com/photos/5875696/pexels-photo-5875696.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" class="card-img-top" style="height: 300px;">
-                <div class="card-body">
-                    <h5 class="card-title">Манго</h5>
-                    <a href="#" class="btn btn-primary">Посмотреть цену</a>
-                    <a href="#" class="btn btn-danger">Удалить</a>
-                </div>
-            </div>
-        </div>
-    </div>
+    <div class="row" id="fruits"></div>
 </div>
 
 
 <script src="base.js"></script>
 <script src="plugins/modal.js"></script>
+<script src="plugins/confirm.js"></script>
 <script src="index.js"></script>
 </body>
 </html>
